--- a/certificati/index.html
+++ b/certificati/index.html
@@ -517,7 +517,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Apple</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">1) Apple Teacher, 2) Apple Teacher swift</span>
+                    <span class="c-blocks__item-title">Apple Teacher • Apple Teacher Swift</span>
 
                   </div>
                 </div>
@@ -535,7 +535,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Google Analytics Academy</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">1) Avanzato, 2) Tag Manager, 3) Principiante, 4) 360, 5) Power Users, 6) Data Studio</span>
+                    <span class="c-blocks__item-title">Avanzato • Tag Manager • Principiante • 360 • Power Users • Data Studio</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.png" alt="Google analytics" style=" width:100%;" >
@@ -561,7 +561,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                   <span class="c-blocks__item-tag">BitDegree</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">1) HTML & CSS, 2) Ethical Hacker</span>
+                    <span class="c-blocks__item-title">HTML & CSS • Ethical Hacker</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/BitDegree.png" alt="Hacker" style=" width:100%;" >
@@ -602,7 +602,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                   <span class="c-blocks__item-tag">A Cloud Guru</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">1) Cloud computing</span>
+                    <span class="c-blocks__item-title">Cloud computing • </span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CloudComputing.png" alt="Cloud" style=" width:100%;" >
