--- a/certificati/index.html
+++ b/certificati/index.html
@@ -607,6 +607,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CloudComputing.png" alt="Cloud" style=" width:100%;" >
               </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/AgileProjectManagement.jpeg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Agile Project Management" >
+                <div class="c-blocks__item-inner">
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">Agile Project Management</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/AgileProjectManagement.jpeg" alt="Agile Project Management" style=" width:100%;" >
+              </a>
+
+
 
           </div>
         </div>
