--- a/certificati/index.html
+++ b/certificati/index.html
@@ -574,13 +574,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/BusinessInSociety.png" alt="Business in society" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/wellbeing-and-resilience-at-work.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Wellbeing and resilience at work" >
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/university-of-leeds.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Wellbeing and resilience at work" >
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Wellbeing and resilience at work</span>
+                    <span class="c-blocks__item-title">Essential skills for your career development • Learn about current digital workplace trends • Wellbeing and resilience at work</span>
                   </div>
                 </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/wellbeing-and-resilience-at-work.png" alt="Wellbeing and resilience at work" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/essential-skills-for-your-career-development.png" alt="Wellbeing and resilience at work" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CertificazioneGDPR.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="GDPR" >
                 <div class="c-blocks__item-inner">
