--- a/certificati/index.html
+++ b/certificati/index.html
@@ -576,6 +576,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/university-of-leeds.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Wellbeing and resilience at work" >
                 <div class="c-blocks__item-inner">
+                  <span class="c-blocks__item-tag">University of Leeds</span>
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Essential skills for your career development • Learn about current digital workplace trends • Wellbeing and resilience at work</span>
                   </div>
