--- a/certificati/index.html
+++ b/certificati/index.html
@@ -574,6 +574,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/BusinessInSociety.png" alt="Business in society" style=" width:100%;" >
               </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/accenture.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="accenture" >
+                <div class="c-blocks__item-inner">
+                  <span class="c-blocks__item-tag">Accenture</span>
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">Digital skills: MOBILE • Digital skills: SOCIAL MEDIA • Digital skills: USER EXPERIENCE</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/accenture.png" alt="accenture" style=" width:100%;" >
+              </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/university-of-leeds.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Wellbeing and resilience at work" >
                 <div class="c-blocks__item-inner">
                   <span class="c-blocks__item-tag">University of Leeds</span>
