--- a/certificati/index.html
+++ b/certificati/index.html
@@ -629,7 +629,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                   <span class="c-blocks__item-tag">IGEA</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">La comunicazione non verbale • </span>
+                    <span class="c-blocks__item-title">La comunicazione non verbale • Il bullismo • I messaggi subliminali</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/ComunicazioneNV.png" alt="Igea" style=" width:100%;" >
