world health organization added

--- a/certificati/index.html
+++ b/certificati/index.html
@@ -642,7 +642,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/AgileProjectManagement.jpeg" alt="Agile Project Management" style=" width:100%;" >
               </a>
-
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/World-health-organization.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Health" >
+                <div class="c-blocks__item-inner">
+                  <span class="c-blocks__item-tag">World Health Organization</span>
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">Hand hygiene • Infection prevention</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/hand-hygiene.png" alt="Health" style=" width:100%;" >
+              </a>
 
 
           </div>
