--- a/certificati/index.html
+++ b/certificati/index.html
@@ -531,6 +531,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/certificatoGoogle.png" alt="Google digital marketing" style=" width:100%;" >
               </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/ef-set-english.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="English level" >
+                <div class="c-blocks__item-inner">
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">EF SET English level</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/ef-set-english.png" alt="English level" style=" width:100%;" >
+              </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Google analytics" >
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Google Analytics Academy</span>
