--- a/certificati/index.html
+++ b/certificati/index.html
@@ -546,7 +546,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <span class="c-blocks__item-title">Deploying Containerezed Applications Technical Overview (DO080) • </span>
                   </div>
                 </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/DO080.png" alt="Red hat" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/DO080.jpg" alt="Red hat" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Google analytics" >
                 <div class="c-blocks__item-inner">
