--- a/didattica/index.html
+++ b/didattica/index.html
@@ -96,8 +96,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 -->
     <!-- CSS index, serve per tutto -->
-  <!--  <link rel="stylesheet" type="text/css" href="http://mauriziominieri.it/static/2020/img/FILEdiARUBA/css/index.css?ts=<?=time()?>&quot">-->
-    <link rel="stylesheet" type="text/css" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/img/FILEdiARUBA/css/index.css">
+   <link rel="stylesheet" type="text/css" href="http://mauriziominieri.it/static/2020/img/FILEdiARUBA/css/index.css?ts=<?=time()?>&quot">
+    <!--<link rel="stylesheet" type="text/css" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/img/FILEdiARUBA/css/index.css">-->
 
     <!-- CSS animation -->
   <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/img/FILEdiARUBA/css/animation.css">
