--- a/index.html
+++ b/index.html
@@ -707,13 +707,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     id="animation-image-0"
     src="/static/2020/img/home/black-mirror-black2.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+    loading="lazy">
 </img>
 <img
     id="animation-image-0"
     src="/static/2020/img/home/black-mirror-white2.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+    loading="lazy">
 </img>
 
 
@@ -766,7 +768,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           id="animation-image-1"
           src="http://www.mauriziominieri.it/static/2020/img/home/android1-dark.png"
           alt="Android dark"
-          class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+          class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+          loading="lazy">
       </img>
       <cloud-image
           src=""
@@ -776,7 +779,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           lg="190"
           xl="281"
           cache-ttl="e365">
-          <img src="http://www.mauriziominieri.it/static/2020/img/home/android1-light.png" alt="Android light">
+          <img src="http://www.mauriziominieri.it/static/2020/img/home/android1-light.png" alt="Android light"
+          loading="lazy">
        </cloud-image>
 
 
@@ -790,13 +794,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     id="animation-image-2"
     src="/static/2020/img/home/robot-arm-light.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+    loading="lazy">
 </img>
 <img
     id="animation-image-2"
     src="/static/2020/img/home/robot-arm.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+    loading="lazy">
 </img>
 
 
@@ -812,13 +818,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     id="animation-image-3A"
     src="/static/2020/img/home/joypad-ps-white.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+    loading="lazy">
 </img>
 <img
     id="animation-image-3"
     src="http://www.mauriziominieri.it/static/2020/img/home/joypad-ps-black2.png"
     alt="iphone dark"
-    class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+    class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+    loading="lazy">
 </img>
 
 
@@ -832,7 +840,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             id="animation-image-4"
             src="http://www.mauriziominieri.it/static/2020/certificati/AppleTeacher_black.png"
             alt="Apple Teacher dark"
-            class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+            class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+            loading="lazy">
         </img>
 
 
@@ -840,7 +849,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             id="animation-image-4"
             src="http://www.mauriziominieri.it/static/2020/certificati/AppleTeacher_white.png"
             alt="Apple Teacher light"
-            class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+            class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+            loading="lazy">
         </img>
 
 
@@ -856,13 +866,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                    id="animation-image-5"
                    src="http://www.mauriziominieri.it/static/2020/img/home/guitar-green.png"
                    alt="iphone dark"
-                   class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+                   class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+                   loading="lazy">
                </img>
                <img
                    id="animation-image-5"
                    src="http://www.mauriziominieri.it/static/2020/img/home/guitar-blue.png"
                    alt="iphone dark"
-                   class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+                   class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+                   loading="lazy">
                </img>
 
 
@@ -876,7 +888,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               id="animation-image-6"
               src="http://www.mauriziominieri.it/static/2020/img/home/iphone.png"
               alt="iphone dark"
-              class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+              class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+              loading="lazy">
           </img>
 
 
@@ -889,13 +902,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               id="animation-image-7"
               src="/static/2020/img/home/rubik-cube-dark.png"
               alt="iphone dark"
-              class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
+              class="hero-devices__image hero-devices__image-0 cloud-image--portrait"
+              loading="lazy">
           </img>
           <img
               id="animation-image-7"
               src="/static/2020/img/home/rubik-cube.png"
               alt="iphone dark"
-              class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
+              class="hero-devices__image hero-devices__image-1 cloud-image--portrait"
+              loading="lazy">
           </img>
 
 
