--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   <link rel="preconnect" href="https://www.googletagmanager.com/">
   <link rel="preconnect" href="https://www.google-analytics.com/">
   <link rel="preconnect" href="https://kstatic.googleusercontent.com/" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/fonts/roboto-v19-latin-300.woff2" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/fonts/roboto-v19-latin-regular.woff2" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/fonts/roboto-v19-latin-500.woff2" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/fonts/roboto-v19-latin-700.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-300.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-regular.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-500.woff2" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-700.woff2" crossorigin>
 
 
   <meta name="title" content="Maurizio Minieri | WebSite">
