--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/carousel.css">
 <link href="http://www.mauriziominieri.it/static/2020/css/photoFlip.css" rel="stylesheet">
 <!--<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/photoFlip.css" rel="stylesheet">-->
-<link href="http://www.mauriziominieri.it/static/2020/css/fonts.css" rel="stylesheet">
+<!--<link href="http://www.mauriziominieri.it/static/2020/css/fonts.css" rel="stylesheet">-->
 <!--FINE CSS-->
 
 <style data-c-focus-control></style>
@@ -48,11 +48,11 @@
   <link rel="preconnect" href="https://www.googletagmanager.com/">
   <link rel="preconnect" href="https://www.google-analytics.com/">
   <link rel="preconnect" href="https://kstatic.googleusercontent.com/" crossorigin>
-  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-300.woff2" crossorigin>
+<!--  <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-300.woff2" crossorigin>
   <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-regular.woff2" crossorigin>
   <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-500.woff2" crossorigin>
   <link rel="preload" as="font" type="font/woff2" href="http://www.mauriziominieri.it/static/2020/fonts/roboto-v19-latin-700.woff2" crossorigin>
-
+-->
 
   <meta name="title" content="Maurizio Minieri | WebSite">
   <meta name="description" content="All about Maurizio Minieri: presentation, skills, my publications and much more. Visit my site to receive all the information you wish to have.">
