--- a/index.html
+++ b/index.html
@@ -3486,7 +3486,7 @@ data-ca-label="tv">
                 <div class="apps-carousel__item apps-carousel__item--phones">
                   <div class="apps-carousel__item-inner">
                     <a class="apps-carousel__item-img-wrap" href="https://gitlab.com/DOPPIA3MME/mytv" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="my TV">
-                      <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/myTv.jp2" srcset="http://www.mauriziominieri.it/static/2020/gif/myTv.jp2 2x" />
+                      <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/myTv.png" srcset="http://www.mauriziominieri.it/static/2020/gif/myTv.png 2x" />
                     </a>
                     <div class="apps-carousel__item-description">
                       <a class="" href="https://gitlab.com/DOPPIA3MME/mytv" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="my TV">
@@ -3522,7 +3522,7 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://gitlab.com/DOPPIA3MME/mc1-notonlypasta" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Not Only Pasta">
-                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/not-only-pasta.jp2" srcset="http://www.mauriziominieri.it/static/2020/gif/not-only-pasta.jp2 2x" />
+                        <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/not-only-pasta.png" srcset="http://www.mauriziominieri.it/static/2020/gif/not-only-pasta.png 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://gitlab.com/DOPPIA3MME/mc1-notonlypasta" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Not Only Pasta">
@@ -3693,7 +3693,7 @@ data-ca-label="tv">
                 <div class="apps-carousel__item apps-carousel__item--wear">
                   <div class="apps-carousel__item-inner">
                     <a class="apps-carousel__item-img-wrap" href="https://gitlab.com/DOPPIA3MME/cabway-official" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Cabway">
-                      <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/cabway.jp2" srcset="http://www.mauriziominieri.it/static/2020/gif/cabway.jp2 2x" />
+                      <img loading="lazy" alt="" class="apps-carousel__item-img" src="http://www.mauriziominieri.it/static/2020/gif/cabway.png" srcset="http://www.mauriziominieri.it/static/2020/gif/cabway.png 2x" />
                     </a>
                     <div class="apps-carousel__item-description">
                       <a class="" href="https://gitlab.com/DOPPIA3MME/cabway-official" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Cabway">
@@ -3990,7 +3990,7 @@ data-ca-label="tv">
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://github.com/mauriziominieri/Manus-VR" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Personal Manus VR">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img loading="lazy" alt="" role="presentation" class="apps-carousel__item-description-icon" src="http://www.mauriziominieri.it/static/2020/gif/manus-vr.jp2" srcset="http://www.mauriziominieri.it/static/2020/gif/manus-vr.jp2 2x">
+                            <img loading="lazy" alt="" role="presentation" class="apps-carousel__item-description-icon" src="http://www.mauriziominieri.it/static/2020/gif/manus-vr.png" srcset="http://www.mauriziominieri.it/static/2020/gif/manus-vr.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                               Personal Manus VR
