--- a/index.html
+++ b/index.html
@@ -430,17 +430,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul aria-hidden="true" role="menu">
             <li>
                   <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="curriculum">
-                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
+                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img loading="lazy" alt="Curriculum" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
             </span>Curriculum</a>
                 </li>
             <li>
                   <a href="http://www.mauriziominieri.it/static/2020/certificati/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="business card">
-                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Business card" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="350">
+                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img loading="lazy" alt="Business card" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="350">
             </span>Biglietto da visita</a>
                 </li>
                 <li>
                       <a href="http://www.mauriziominieri.it/certificati/" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="degrees">
-                          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Degrees" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/degrees.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/degrees.png 2x" height="200" width="350">
+                          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img loading="lazy" alt="Degrees" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/degrees.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/degrees.png 2x" height="200" width="350">
                 </span>Certificati</a>
                     </li>
 
@@ -5906,7 +5906,7 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/battlebash.jpg" alt="BattleBash" style="height:300px">
+            <img loading="lazy" class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/battlebash.jpg" alt="BattleBash" style="height:300px">
             <div class="card-body">
               <h3 class="card-title font-weight-bold">BattleBash</h3>
               <p class="text-normal" style="height:350px">
@@ -5980,7 +5980,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/Plinio1.jpeg" alt="" style=" width:100%;" >
+                <img loading="lazy" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/Plinio1.jpeg" alt="" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple teacher certification">
                 <div class="c-blocks__item-inner">
@@ -6000,7 +6000,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/virtualReality.png" alt="" style="width:100%;">
+                <img loading="lazy" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/virtualReality.png" alt="" style="width:100%;">
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/certificati/NASA.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Nasa certification">
                 <div class="c-blocks__item-inner">
@@ -6020,7 +6020,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img id="battlebash-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" alt="BattleBash">
+                <img loading="lazy" id="battlebash-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" alt="BattleBash">
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Gaze Effect">
                 <div class="c-blocks__item-inner">
@@ -6030,7 +6030,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img id="tito-livio-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg" alt="Tito Livio">
+                <img id="tito-livio-image" loading="lazy" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg" alt="Tito Livio">
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"  target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
                 <div class="c-blocks__item-inner">
