--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 -->
 
   <meta name="title" content="Maurizio Minieri | WebSite">
-  <meta name="description" content="All about Maurizio Minieri: presentation, skills, my publications and much more. Visit my site to receive all the information you wish to have.">
+  <meta name="description" content="Tutto su Maurizio Minieri: presentazione, competenze, pubblicazioni, foto con i miei studenti e molto altro. Visita il mio sito per ricevere tutte le informazioni che desideri.">
 
 <!--SERVE? DUBITO-->
   <script type="application/ld+json">
@@ -75,7 +75,7 @@
       "parentOrganization": "Google LLC"
     },
     "name": "Maurizio Minieri | WebSite",
-    "description": "All about Maurizio Minieri: presentation, skills, my publications and much more. Visit my site to receive all the information you wish to have.",
+    "description": "Tutto su Maurizio Minieri: presentazione, competenze, pubblicazioni, foto con i miei studenti e molto altro. Visita il mio sito per ricevere tutte le informazioni che desideri.",
     "sameAs": [
       "https://www.instagram.com/DOPPIA3MME/",
       "https://www.facebook.com/maurizio.minieri/",
