index and en_index thinned

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -933,7 +933,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
               <p class="cta-grid__copy-item text-normal cascade-text__item">
 
-                Hy, I introduce myself, I am Maurizio Minieri.<br><br>
+                Hi, I introduce myself, I am Maurizio Minieri.<br><br>
                 I have always been intrigued by the mechanism that resides in things since I was a child, I was the kid who disassembled his expensive to see how they worked
                 rather than using them, and the passion for video games has grown over the years and after having attended an experimental scientific high school I enrolled at the
                 University of Naples Federico II, immersing myself in this vast and fantastic world: <b class="">Computer science</b>.
@@ -1703,7 +1703,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
    <!--INIZIO COMPETENZE SU TUTTI I DISPOSITIVI-->
-
+<!--
   <section
       class="l-section l-section--has-subsection c-tabs"
       id="section-android-os"
@@ -1971,7 +1971,7 @@ data-ca-label="tv">
       </div>
     </div>
   </section>
-
+-->
   <!--FINE COMPETENZE su tutti i dispositivi-->
 
 
@@ -1982,7 +1982,7 @@ data-ca-label="tv">
 
 
   <!--INIZIO PALLINI CARICAMENTO  content-multimedia--remove-margin-top questo toglie il margine superiore-->
-
+<!--
   <section
     id="q-gesture-navigation"
     class="content-multimedia content-multimedia--primary content-multimedia--reversed content-multimedia--timer"
@@ -2053,9 +2053,9 @@ data-ca-label="tv">
 
 
 
-
+-->
     <!--PANNELLO1-->
-
+<!--
               <div class="tab-timer__panel
                 tab-timer__panel--q-gesture-navigation
               "
@@ -2135,9 +2135,9 @@ data-ca-label="tv">
 
 
 
-
+-->
     <!--PANNELLO2-->
-
+<!--
               <div class="tab-timer__panel
                 tab-timer__panel--q-gesture-navigation
               hidden"
@@ -2218,9 +2218,9 @@ data-ca-label="tv">
 
 
 
-
+-->
           <!--PANNELLO3-->
-
+<!--
                 <div class="tab-timer__panel
                   tab-timer__panel--q-gesture-navigation
                 hidden"
@@ -2382,7 +2382,7 @@ data-ca-label="tv">
   </section>
 
 
-
+-->
   <!--FINE PALLINI CARICAMENTO-->
 
 
@@ -2589,7 +2589,7 @@ data-ca-label="tv">
                     </div>
                   </div>
                 </div>
-
+<!--
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Google Play Music">
@@ -2607,7 +2607,7 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
-
+-->
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://gitlab.com/DOPPIA3MME/mc1-notonlypasta" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Not Only Pasta">
@@ -2756,6 +2756,7 @@ data-ca-label="tv">
                         </div>
                       </div>
                     </div>
+      <!--
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.venticake.retrica" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Retrica">
@@ -2773,7 +2774,7 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
-
+-->
 
 
               </div>
@@ -2796,7 +2797,7 @@ data-ca-label="tv">
                     </div>
                   </div>
                 </div>
-
+<!--
                   <div class="apps-carousel__item apps-carousel__item--wear">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.facebook.orca" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Messenger">
@@ -2814,7 +2815,7 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
-
+-->
               </div>
               <div id="carousel-apps-items-wear-featured">
 
@@ -2876,7 +2877,7 @@ data-ca-label="tv">
               </div>
               <div id="carousel-apps-items-tablets-popular">
 
-
+<!--
                   <div class="apps-carousel__item apps-carousel__item--tablets">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.ustwo.monumentvalley" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Monument Valley">
@@ -2894,6 +2895,7 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
+                -->
                   <div class="apps-carousel__item apps-carousel__item--tablets">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.spotify.music" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Spotify">
